# is-default-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
derive/: CHANGELOG.md  Cargo.toml
derive/src/: lib.rs
is_default/: Cargo.toml  README.md
is_default/src/: lib.rs  not_via_default_eq.rs
is_default/src/not_via_default_eq/: core_types.rs  std_types.rs
is_default/tests/: types.rs
is_default_derive/: Cargo.toml
src/: lib.rs
src/not_via_default_eq/: core_types.rs  std_types.rs
tests/: derive.rs  types.rs
