[package]
name = "is_default"
version = "0.1.2"
authors = ["Ivan Reutov <nujievik@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "A trait for checking whether a value is default, with derive support."
repository = "https://github.com/nujievik/is-default-rs"
license = "MIT OR Apache-2.0"
keywords = ["api", "no_std"]
categories = ["rust-patterns"]

[features]
default = ["derive", "std"]
derive = ["is_default_derive"]
std = []
via_default_eq = []
nightly = ["ascii_char", "f16", "f128"]
ascii_char = []
f16 = []
f128 = []

[dependencies]
is_default_derive = { version = "0.1.0", path = "../is_default_derive", optional = true }
