[package]
name = "is_default_derive"
version = "1.0.0"
authors = ["Ivan Reutov <nujievik@gmail.com>"]
edition = "2024"
rust-version = "1.85"
description = "A derive macro for the `IsDefault` trait from `is_default` crate."
repository = "https://github.com/nujievik/rust_is_default"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = "2"
